# Progetto_Reti

GreenPass/: CMakeLists.txt  CentroVaccinale.c  Client.c  ClientS.c  ClientT.c  ServerG.c  ServerV.c  include_functions.c
GreenPass/Header/: Client.h  ClientS.h  Server.h  ServerG.h  ServerV.h  include_functions.h  p_auth.h  p_dbG.h  p_queryG.h  p_richiestaS.h  p_richiestaT.h
GreenPass/libreria/: db_model.c  db_model.h
Progetto_GreenPass/: CMakeLists.txt  CentroVaccinale.c  Client.c  ServerG.c  ServerV.c
Progetto_GreenPass/Header/: Client.h  include_functions.h
Progetto_GreenPass/libreria/: db_model.h
